force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT(ISBLANK(Date_of_Birth__c)),
  YEAR(TODAY()) - YEAR(Date_of_Birth__c) - 
  IF( (MONTH(Date_of_Birth__c) * 100 + DAY(Date_of_Birth__c)) &gt; (MONTH(TODAY()) * 100 + DAY(TODAY())), 1, 0),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>