force-app/main/default/objects/Account/fields/Portal_Number__c.field-meta.xml
<CustomField>
    <fullName>Portal_Number__c</fullName>
    <label>Portal Number</label>
    <type>AutoNumber</type>
</CustomField>